<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="demo_1_simple_dialog">DEMO 1 - SIMPLE DIALOG</string>
    <string name="demo_2_buttons_dialog">DEMO 2 - BUTTONS DIALOG</string>
    <string name="enter_some_text">Enter Some Text</string>
    <string name="demo_3_text_input_dialog">Demo 3 - Text Input Dialog</string>
    <string name="the_sum_is">The sum is</string>
    <string name="exercise_3">EXERCISE 3</string>
    <string name="textview">TextView</string>
    <string name="demo_5_timepicker_dialog">DEMO 5 - TIMEPICKER DIALOG</string>
    <string name="demo_4_datepicker_dialog">Demo 4 - Datepicker Dialog</string>
</resources>